--- a/BankSimul/mainwindow.ui
+++ b/BankSimul/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page">
      <widget class="QPushButton" name="pushButton_lueKortti">
@@ -42,7 +42,7 @@
        </font>
       </property>
       <property name="text">
-       <string>Lue kortti</string>
+       <string>Kirjaudu sisään</string>
       </property>
      </widget>
     </widget>
@@ -588,18 +588,18 @@
      </widget>
     </widget>
     <widget class="QWidget" name="page_4">
-     <widget class="QWidget" name="layoutWidget_3">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>260</y>
-        <width>851</width>
+        <x>320</x>
+        <y>220</y>
+        <width>193</width>
         <height>152</height>
        </rect>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QLabel" name="label_5">
            <property name="sizePolicy">
@@ -645,6 +645,9 @@
            </property>
            <property name="text">
             <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
           </widget>
          </item>
@@ -706,9 +709,9 @@
      <widget class="QWidget" name="layoutWidget_4">
       <property name="geometry">
        <rect>
-        <x>180</x>
+        <x>170</x>
         <y>10</y>
-        <width>511</width>
+        <width>521</width>
         <height>401</height>
        </rect>
       </property>
@@ -726,7 +729,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QTableView" name="tableView"/>
+        <widget class="QTableView" name="tableView">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButtonOkTilitapahtumat">
